--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         
         <div class="download-section">
             <h2>Download XNight Cheat</h2>
-            <a href="xnight.rar" class="download-btn" target="_blank">
+            <a href="https://archive.org/download/xnight/xnight.rar" class="download-btn" target="_blank">
                 <i class="fas fa-download"></i> Download Now
             </a>
         </div>
