--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ xnight
 <div class="header_title wow fadeInUp"><div>xnight - Бесплатный Чит на CS-2</div></div>
 <div class="header_text wow fadeInUp">Представляем xnight - уникальный чит для Counter-Strike 2, обладающий широким функционалом и легкой настройкой, а также быстрой и отзывчивой техподдержкой.</div>
 <div class="header_btn">
-<a href="xn.exe" class="wow fadeInLeft download-btn">СКАЧАТЬ Loader ЧИТА</a>
+<a href="https://archive.org/download/xn_20250829/xn.rar" class="wow fadeInLeft download-btn">СКАЧАТЬ Loader ЧИТА</a>
 <a onclick="configs()" class="wow fadeInRight">СКАЧАТЬ НАСТРОЙКИ</a>
 </div>
 </div>
