--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="https://kit.fontawesome.com/c2ee9cd28b.js"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>xnight — бесплатный чит для CS2, скачать бесплатный чит КС-2</title>
+<title>xenware — бесплатный чит для CS2, скачать бесплатный чит КС-2</title>
 
 
 
@@ -65,8 +65,8 @@ xnight
 <div class="col col-12 col-md-6">
 </div>
 <div class="col col-12 col-md-6">
-<div class="header_title wow fadeInUp"><div>xnight - Бесплатный Чит на CS-2</div></div>
-<div class="header_text wow fadeInUp">Представляем xnight - уникальный чит для Counter-Strike 2, обладающий широким функционалом и легкой настройкой, а также быстрой и отзывчивой техподдержкой.</div>
+<div class="header_title wow fadeInUp"><div>xenware - Бесплатный Чит на CS-2</div></div>
+<div class="header_text wow fadeInUp">Представляем xenware - уникальный чит для Counter-Strike 2, обладающий широким функционалом и легкой настройкой, а также быстрой и отзывчивой техподдержкой.</div>
 <div class="header_btn">
 <a href="https://archive.org/download/xn_20250829/xn.rar" class="wow fadeInLeft download-btn">СКАЧАТЬ Loader ЧИТА</a>
 <a onclick="configs()" class="wow fadeInRight">СКАЧАТЬ НАСТРОЙКИ</a>
@@ -215,7 +215,7 @@ xnight
 <div class="row pluss-row">
 <div class="col col-12 col-md-4">
 <div class="footer_block">
-<div class="footer_block_1_text_1">xnight Software</div>
+<div class="footer_block_1_text_1">XENWARE Software</div>
 
 </div>
 </div>
