--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <img src="main/templates/img/logo-header.png">
 </div>
 <div class="header__logo-text">
-xnight
+xenware
 </div>
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
